Update tree name to show lavel and panel show level + description

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+file.reference.swingx-all-1.6.4.jar=lib\\swingx-all-1.6.4.jar
 #Tue Jan 11 10:36:12 ICT 2022
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -24,7 +25,6 @@ jar.archive.disabled=${jnlp.enabled}
 junit.selected.version=4
 includes=**
 application.vendor=Jazzy
-file.reference.swingx-0.9.5.jar=lib/swingx-0.9.5.jar
 mkdist.disabled=false
 jar.compress=false
 jnlp.mixed.code=default
@@ -58,9 +58,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 javac.classpath=\
-    ${file.reference.swingx-0.9.5.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.CopyLibs.classpath}
+    ${libs.CopyLibs.classpath}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
