--- a/build.xml
+++ b/build.xml
@@ -7,67 +7,49 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="XBuild" default="default" basedir=".">
-    <description>Builds, tests, and runs the project XBuild.</description>
+
+<project name="XBuild" default="main" basedir=".">
+    <!-- Netbeans build -->
     <import file="nbproject/build-impl.xml"/>
-    <!--
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+    <description>Create XBuild2 Java app for DSSAT</description>
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+    <!-- Version -->
+    <property name="version" value="v1.0.0.0" />
 
-    (Targets beginning with '-' are not intended to be called on their own.)
+    <target name="-post-jar" depends="compile" description="package, output to JAR">
+        <property name="store.jar.name" value="XBuild2" />
 
-    Example of inserting an obfuscator after compilation could look like this:
+        <!-- Java sources -->
+        <property name="src.dir" location="src" />
 
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
+        <!-- Java classes -->
+        <property name="store.dir" location="build" />
 
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+        <!-- Output, Jar -->
+        <tstamp/>
+        <property name="store.jar" location="${build.dir}/${store.jar.name}-${version}-64-bit.jar" />
 
+        <jar destfile="${build.dir}/tmp_build.jar" filesetmanifest="skip">
+            <zipgroupfileset dir="dist" includes="*.jar"/>
+            <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}"/>
+            </manifest>
 
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
+        </jar>
+        <zip destfile="${store.jar}">
+            <zipfileset src="${build.dir}/tmp_build.jar"
+                        excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+        </zip>
+        <delete file="${store.dir}/tmp_build.jar"/>
+    </target>
 
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
+    <target name="clean" description="clean up">
+        <delete dir="${store.dir}" />
+        <delete dir="${sotre.jar}" />
+    </target>
 
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="XBuild-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+    <!-- Default, run this -->
+    <target name="main" depends="clean, compile, jar" />
 </project>
